<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:layout_gravity="left"
    android:orientation="vertical">

    <TextView
        android:id="@+id/forecast_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/regular_margin"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:text="@string/settings_city_default" />

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/current_card_view"
            style="@style/card_view"
            card_view:cardBackgroundColor="@color/background_main"
            card_view:cardCornerRadius="@dimen/card_radius">

            <RelativeLayout
                android:id="@+id/current_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/forecast_city"
                android:padding="@dimen/small_margin">

                <TextView
                    android:id="@+id/current_title"
                    style="@style/list_item_title"
                    android:layout_width="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/current_weather" />

                <TextView
                    android:id="@+id/current_date"
                    style="@style/list_item_title"
                    android:layout_toEndOf="@id/current_title"
                    android:text="@string/temp_temp" />

                <TextView
                    android:id="@+id/current_time"
                    style="@style/list_item_field"
                    android:layout_below="@id/current_title"
                    android:layout_alignParentStart="true"
                    android:text="@string/time_of_data" />

                <TextView
                    android:id="@+id/current_time_text"
                    style="@style/current_list_item_text"
                    android:layout_below="@id/current_title"
                    android:layout_toStartOf="@id/current_icon"
                    android:layout_toEndOf="@id/current_time"
                    tools:text="@string/temp_temp" />

                <ImageView
                    android:id="@+id/current_icon"
                    style="@style/list_item_image"
                    android:layout_alignEnd="@id/current_title"
                    android:layout_alignParentEnd="true"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/icon_for_weather" />

                <TextView
                    android:id="@+id/current_temp"
                    style="@style/list_item_field"
                    android:layout_below="@id/current_time"
                    android:layout_alignParentStart="true"
                    android:text="@string/current_temp" />

                <TextView
                    android:id="@+id/current_temp_text"
                    style="@style/current_list_item_text"
                    android:layout_below="@id/current_time"
                    android:layout_toStartOf="@id/current_icon"
                    android:layout_toEndOf="@id/current_temp"
                    tools:text="@string/temp_temp" />

                <TextView
                    android:id="@+id/current_wind"
                    style="@style/list_item_field"
                    android:layout_below="@id/current_temp"
                    android:text="@string/current_wind_kph" />

                <TextView
                    android:id="@+id/current_wind_text"
                    style="@style/current_list_item_text"
                    android:layout_below="@id/current_temp"
                    android:layout_toEndOf="@id/current_wind"
                    tools:text="@string/temp_temp" />

                <TextView
                    android:id="@+id/current_wind_dir"
                    style="@style/list_item_field"
                    android:layout_below="@id/current_wind"
                    android:text="@string/current_wind_degree" />

                <TextView
                    android:id="@+id/current_wind_dir_text"
                    style="@style/current_list_item_text"
                    android:layout_below="@id/current_wind"
                    android:layout_toEndOf="@id/current_wind_dir"
                    tools:text="@string/temp_temp" />

                <TextView
                    android:id="@+id/current_conditions"
                    style="@style/list_item_field"
                    android:layout_below="@id/current_wind_dir"
                    android:text="@string/conditions" />

                <TextView
                    android:id="@+id/current_conditions_text"
                    style="@style/current_list_item_text"
                    android:layout_below="@id/current_wind_dir"
                    android:layout_toEndOf="@id/current_conditions"
                    android:maxLines="3"
                    tools:text="@string/temp_temp" />

                <TextView
                    android:id="@+id/current_humidity"
                    style="@style/list_item_field"
                    android:layout_below="@id/current_conditions_text"
                    android:text="@string/humidity_title" />

                <TextView
                    android:id="@+id/current_humidity_text"
                    style="@style/current_list_item_text"
                    android:layout_below="@id/current_conditions_text"
                    android:layout_toEndOf="@id/current_humidity"
                    android:paddingBottom="@dimen/small_margin"
                    tools:text="@string/temp_temp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_400sdp"
            android:layout_marginTop="@dimen/regular_margin">

            <!-- Layout for a list of weather forecast -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                style="@style/recycler_view"
                tools:listitem="@layout/list_item" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <!-- Empty view is only visible when the list has no items. -->
        <TextView
            android:id="@+id/empty_view"
            style="@style/empty_main_portrait"
            tools:text="@string/no_data_available" />
        <!-- progress bar view is only visible when the list is being created -->

        <ProgressBar
            android:id="@+id/loading_spinner"
            style="@style/progress_main_portrait" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
</LinearLayout>