<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        style="@style/card_view"
        card_view:cardBackgroundColor="@color/background_main"
        card_view:cardCornerRadius="@dimen/card_radius">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/forecast_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin">

            <TextView
                android:id="@+id/date_of_forecast"
                style="@style/list_item_title"
                android:layout_width="0dp"
                android:gravity="left"
                android:text="@string/date_of_forecast"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <ImageView
                android:id="@+id/condition_icon"
                style="@style/list_item_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/date_of_forecast"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/sun_icon1" />

            <TextView
                android:id="@+id/min_temp"
                style="@style/list_item_field"
                android:text="@string/min_temp_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_of_forecast" />

            <TextView
                android:id="@+id/min_temp_text"
                style="@style/list_item_text"
                app:layout_constraintLeft_toRightOf="@+id/min_temp"
                app:layout_constraintTop_toBottomOf="@id/date_of_forecast"
                tools:text="@string/temp_temp" />

            <TextView
                android:id="@+id/max_temp"
                style="@style/list_item_field"
                android:text="@string/max_temp_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/min_temp" />

            <TextView
                android:id="@+id/max_temp_text"
                style="@style/list_item_text"
                app:layout_constraintLeft_toRightOf="@id/max_temp"
                app:layout_constraintTop_toBottomOf="@id/min_temp"
                tools:text="@string/temp_temp" />

            <TextView
                android:id="@+id/conditions"
                style="@style/list_item_field"
                android:text="@string/conditions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/max_temp" />

            <TextView
                android:id="@+id/conditions_text"
                style="@style/list_item_text"
                android:maxLines="3"
                app:layout_constraintLeft_toRightOf="@id/conditions"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/max_temp"
                tools:text="@string/temp_temp" />

            <TextView
                android:id="@+id/humidity"
                style="@style/list_item_field"
                android:text="@string/humidity_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/conditions_text" />

            <TextView
                android:id="@+id/humidity_text"
                style="@style/list_item_text"
                android:paddingBottom="@dimen/small_margin"
                app:layout_constraintLeft_toRightOf="@id/humidity"
                app:layout_constraintTop_toBottomOf="@id/conditions_text"
                tools:text="@string/temp_temp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>